--- a/frontend/package.json
+++ b/frontend/package.json
@@ -11,6 +11,7 @@
   },
   "dependencies": {
     "axios": "^1.12.2",
+    "framer-motion": "^12.23.22",
     "h3-js": "^4.3.0",
     "leaflet": "^1.9.4",
     "react": "^19.1.1",
